# kosensai_db-rs

./: Cargo.toml  README.md
kosensai_db/: Cargo.toml
kosensai_db/src/: main.rs  name_insert.rs  read.rs
sql/: create_status_table.sql
src/: check_and_create.rs  individual_rank.rs  main.rs  name_insert.rs  score.rs  update.rs
start-db-server/: Cargo.toml  app.rc
start-db-server/src/: main.rs
